--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1177,6 +1177,9 @@ section {
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 #footer h3 {
